@@ -1,3 +1,15 @@
+2017-08-18  Ryan Haddad  <ryanhaddad@apple.com>
+
+        Unreviewed, rolling out r220938.
+
+        The API tests added with this change are failing.
+
+        Reverted changeset:
+
+        "Add WTFLogChannel level to allow runtime log filtering"
+        https://bugs.webkit.org/show_bug.cgi?id=175731
+        http://trac.webkit.org/changeset/220938
+
 2017-08-18  Eric Carlson  <eric.carlson@apple.com>
 
         Add WTFLogChannel level to allow runtime log filtering
